--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 				</section>
 
 				<section>
-					<img src="images/photobooth/Photo 3.jpg"></img>
+					<img src="images/photobooth/photo 3.jpg"></img>
 				</section>
 
 				<section>
-					<img src="images/photobooth/Photo 2.jpg"></img>
+					<img src="images/photobooth/photo 2.jpg"></img>
 				</section>
 
 				<section>
